r97: WorldObservation single-pass scan + BotMemoryStore O(1) summary removal
1. WorldObservation.countNearbyBatched() — single-pass scan for all 19
   block types instead of 19 separate volume scans. ~19x performance
   improvement for world observation.

2. BotMemoryStore.shortTermSummaries changed from ArrayList to ArrayDeque.
   remove(0) changed from O(n) to O(1) removeFirst().